Wed Mar 14 15:51:36 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: robert@xsl.00008.org pointed out a
	  problem in xsl:copy-of in case of attributes
	* tests/docs/Makefile.am tests/docs/bug-3-.xml
	  tests/general/Makefile.am tests/general/bug-3-.*:
	  added the test to the general regression suite

Wed Mar 14 14:21:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.c: applied and fixed ptittom@free.fr patch
	  fixing some of the missing functionnalities in the XSLT
	  functions implementations.
	  
Tue Mar 13 14:38:48 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am: nick@debian.org forwarded a fix

Tue Mar 13 10:29:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* README.cvs-commits: added, pointing to HACKING
	* HACKING: added defines commit rules.

Mon Mar 12 14:43:20 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extra.c libxslt/variables.c: fixing compilation
	  when libxml was compiled without debug support

Sat Mar 10 13:50:16 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: time for 0.5.0
	* tests/docs/Makefile.am tests/general/Makefile.am: make sure the
	  new test files are included in the distribution
	* doc/xslt.html : updated
	* doc/html/*.html: regenerated the docs

Thu Mar  8 02:34:52 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/docbook/result/html/*.html: regenerated the HTML
	  now that value-of an result tree don't include the fake root

Thu Mar  8 02:26:56 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/variables.c: removed a couple
	  of possibly uninitialized var probs
	* tests/xmlspec/Makefile.am: run the processing without verbose
	  avoid raising generated id differences.

Wed Mar  7 23:22:09 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c libxslt/xsltInternals.h: fixed a stylesheet
	  reuse problem.